# crossref-api-python-client

./: LICENSE  README.md  api.py  publish.py  pyproject.toml  setup.py  tests.py
crossrefapiclient/: __init__.py  crossref.py  resources.py  utils.py
