[tool.poetry]
name = "crossref-api-python"
version = "0.1.0"
description = "Python wrapper for CrossRef API"
authors = ["awakenedhaki <rodrigo.vallejosch@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
