[tool.poetry]
name = "crossref-api-python-client"
version = "0.1.0"
description = "Python wrapper for CrossRef REST API"
authors = ["awakenedhaki <rodrigo.vallejosch@gmail.com>"]
license = "MIT License"

readme = 'README.md'

repository = 'https://github.com/awakenedhaki/crossref-api-python-client'
homepage = 'https://github.com/awakenedhaki/crossref-api-python-client'

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
